# django

prod/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: forms.py  views.py
