[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "asus",email = "shudayberdiyew00@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-filter (>=25.1,<26.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
